Server is now independent from the Client, new Server Console